--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -76,9 +76,7 @@ jobs:
 
             let readmeContent = fs.readFileSync('README.md', 'utf-8');
 
-            const prefix = '\n```\'
-
-            const newContent = '```\n' + process.env.BENCHMARK_RESULTS + prefix;
+            const newContent = '```\n' + process.env.BENCHMARK_RESULTS + '\n```';
 
             console.log(newContent)
 
